# mp

./: .gitignore  Cargo.toml  README.md  mersenne_primes.txt  predict_next_mersenne.py
src/: generate_primes.rs  main.rs  test_prime.rs
